Trying to fix spacing issue

--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,8 @@ img {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1em 2em;
+    height: 72px;
+    padding: 0 2em;
 }
 
 .nav-left .logo {
@@ -103,4 +104,5 @@ img {
     object-fit: cover;
     display: block;
     border-radius: 0;
+    margin: 0;
 }
